[gd_scene load_steps=10 format=3 uid="uid://bikfxard5trwa"]

[ext_resource type="Script" uid="uid://b608iopled6q7" path="res://combat_menu.gd" id="1_w5dl1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q7ws"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5dl1"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4evm"]
bg_color = Color(0, 0.462745, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wcwt5"]
bg_color = Color(0.66889, 0.0704318, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_th1ls"]
bg_color = Color(4.86121e-06, 0.710553, 0.472364, 1)

[sub_resource type="LabelSettings" id="LabelSettings_u4evm"]
font_size = 32
font_color = Color(0, 0, 0, 1)
shadow_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75v0u"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivmjc"]
bg_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.007
anchor_top = 0.686
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.96
offset_top = 0.0799561
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("1_w5dl1")

[node name="BackgroundColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FightGrid" type="GridContainer" parent="."]
visible = false
layout_mode = 2
anchor_left = 0.374
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.279968
grow_horizontal = 0
grow_vertical = 2
columns = 2

[node name="ActionButton1" type="Button" parent="FightGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2q7ws")

[node name="ActionButton2" type="Button" parent="FightGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2q7ws")

[node name="ActionButton3" type="Button" parent="FightGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2q7ws")

[node name="ActionButton4" type="Button" parent="FightGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_2q7ws")
text = "Back"

[node name="MenuGrid" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.374
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.279968
grow_horizontal = 0
grow_vertical = 2
columns = 2

[node name="FightButton" type="Button" parent="MenuGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_w5dl1")
text = "FIGHT"

[node name="ActionButton" type="Button" parent="MenuGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_u4evm")
text = "ACTION"

[node name="ItemButton" type="Button" parent="MenuGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_wcwt5")
text = "ITEM"

[node name="RunButton" type="Button" parent="MenuGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_th1ls")
text = "RUN"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
anchor_right = 0.374
anchor_bottom = 1.0
offset_right = 0.279968

[node name="ColorRect2" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterGrid" type="GridContainer" parent="PanelContainer"]
layout_mode = 2

[node name="CharacterName" type="Label" parent="PanelContainer/CharacterGrid"]
layout_mode = 2
label_settings = SubResource("LabelSettings_u4evm")

[node name="HpBar" type="ProgressBar" parent="PanelContainer/CharacterGrid"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_75v0u")
theme_override_styles/fill = SubResource("StyleBoxFlat_ivmjc")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="PanelContainer/CharacterGrid/HpBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -26.0
offset_right = 26.0
offset_bottom = 23.0
grow_horizontal = 2
